--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,15 +26,15 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-          cache-dependency-path: backend/package-lock.json
-      
+          cache-dependency-path: package-lock.json
+
       - name: Install dependencies
         working-directory: ./backend
-        run: npm ci
-      
+        run: npm install
+
       - name: Run tests
         working-directory: ./backend
-        run: npm test -- --coverage
+        run: npm run test --if-present -- --coverage
         env:
           NODE_ENV: test
       
@@ -60,11 +60,11 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-          cache-dependency-path: frontend/package-lock.json
-      
+          cache-dependency-path: package-lock.json
+
       - name: Install dependencies
         working-directory: ./frontend
-        run: npm ci
+        run: npm install
       
       - name: Run tests
         working-directory: ./frontend
@@ -81,15 +81,15 @@ jobs:
       - uses: actions/checkout@v3
       
       - name: Initialize CodeQL
-        uses: github/codeql-action/init@v2
+        uses: github/codeql-action/init@v3
         with:
           languages: 'javascript'
       
       - name: Autobuild
-        uses: github/codeql-action/autobuild@v2
+        uses: github/codeql-action/autobuild@v3
       
       - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v2
+        uses: github/codeql-action/analyze@v3
         with:
           category: "/language:javascript"
 
@@ -197,13 +197,13 @@ jobs:
           output: 'frontend-trivy-results.sarif'
       
       - name: Upload Trivy results
-        uses: github/codeql-action/upload-sarif@v2
+        uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: 'backend-trivy-results.sarif'
           category: 'trivy-backend'
       
       - name: Upload Trivy results frontend
-        uses: github/codeql-action/upload-sarif@v2
+        uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: 'frontend-trivy-results.sarif'
           category: 'trivy-frontend'
@@ -216,12 +216,15 @@ jobs:
     steps:
       - name: Check CI Status
         run: |
-          if [[ "${{ needs.backend-tests.result }}" != "success" || 
+          if [[ "${{ needs.backend-tests.result }}" != "success" ||
                 "${{ needs.frontend-tests.result }}" != "success" ||
                 "${{ needs.codeql-scan.result }}" != "success" ||
-                "${{ needs.gitleaks-scan.result }}" != "success" ||
-                "${{ needs.trivy-scan.result }}" != "success" ]]; then
+                "${{ needs.gitleaks-scan.result }}" != "success" ]]; then
             echo "❌ CI/Security checks failed"
+            exit 1
+          fi
+          if [[ "${{ needs.trivy-scan.result }}" == "failure" ]]; then
+            echo "❌ Trivy scan failed"
             exit 1
           fi
           echo "✅ All CI/Security checks passed"
