--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,8 +1,5 @@
 name: CD - Build & Deploy
-
 on:
-  push:
-    branches: [main]
   workflow_run:
     workflows: ["CI - Tests & Security Scan"]
     types: [completed]
@@ -16,109 +13,54 @@ env:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    if: github.event.workflow_run.conclusion == 'success' || github.event_name == 'push'
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     
     permissions:
       contents: read
       packages: write
-    
+      
     steps:
-      - uses: actions/checkout@v3
+    - uses: actions/checkout@v4  # Updated
+    
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3  # Updated
       
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      
-      - name: Log in to Container Registry
-        uses: docker/login-action@v2
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      
-      - name: Extract metadata (backend)
-        id: meta-backend
-        uses: docker/metadata-action@v4
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_BACKEND }}
-          tags: |
-            type=ref,event=branch
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=sha
-            type=raw,value=latest
-      
-      - name: Extract metadata (frontend)
-        id: meta-frontend
-        uses: docker/metadata-action@v4
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_FRONTEND }}
-          tags: |
-            type=ref,event=branch
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=sha
-            type=raw,value=latest
-      
-      - name: Build and push backend image
-        uses: docker/build-push-action@v4
-        with:
-          context: ./backend
-          push: true
-          tags: ${{ steps.meta-backend.outputs.tags }}
-          labels: ${{ steps.meta-backend.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-      
-      - name: Build and push frontend image
-        uses: docker/build-push-action@v4
-        with:
-          context: ./frontend
-          push: true
-          tags: ${{ steps.meta-frontend.outputs.tags }}
-          labels: ${{ steps.meta-frontend.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+    - name: Log in to GHCR
+      uses: docker/login-action@v3  # Updated
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    
+    # Backend
+    - name: Build & Push Backend
+      uses: docker/build-push-action@v5  # Updated
+      with:
+        context: ./backend
+        push: true
+        tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_BACKEND }}:latest
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
+        
+    # Frontend  
+    - name: Build & Push Frontend
+      uses: docker/build-push-action@v5
+      with:
+        context: ./frontend
+        push: true
+        tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_FRONTEND }}:latest
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
 
-  deploy-to-render:
+  deploy-render:
     needs: build-and-push
     runs-on: ubuntu-latest
     
     steps:
-      - uses: actions/checkout@v3
+    - name: Deploy Backend to Render
+      run: curl -X POST "${{ secrets.RENDER_DEPLOY_HOOK_BACKEND }}"
+      continue-on-error: true
       
-      - name: Deploy Backend to Render
-        run: |
-          curl -X POST "${{ secrets.RENDER_DEPLOY_HOOK_BACKEND }}"
-        continue-on-error: true
-      
-      - name: Deploy Frontend to Render
-        run: |
-          curl -X POST "${{ secrets.RENDER_DEPLOY_HOOK_FRONTEND }}"
-        continue-on-error: true
-      
-      - name: Wait for deployment
-        run: sleep 30
-      
-      - name: Check deployment health
-        run: |
-          echo "Checking health endpoints..."
-          curl -f https://eduresume-api.onrender.com/health || echo "⚠️ Backend health check pending"
-          curl -f https://eduresume.onrender.com || echo "⚠️ Frontend health check pending"
-
-  notify:
-    needs: [build-and-push, deploy-to-render]
-    runs-on: ubuntu-latest
-    if: always()
-    
-    steps:
-      - name: Deployment Status
-        run: |
-          if [[ "${{ needs.build-and-push.result }}" == "success" && 
-                "${{ needs.deploy-to-render.result }}" == "success" ]]; then
-            echo "✅ Deployment successful!"
-            echo "🌐 Frontend: https://eduresume.onrender.com"
-            echo "🔗 API: https://eduresume-api.onrender.com"
-          else
-            echo "❌ Deployment failed"
-            exit 1
-          fi
+    - name: Deploy Frontend to Render  
+      run: curl -X POST "${{ secrets.RENDER_DEPLOY_HOOK_FRONTEND }}"
+      continue-on-error: true
