--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,72 +1,31 @@
-version: '3.8'
-
 services:
-  # MongoDB Service
-  mongodb:
-    image: mongo:6.0
-    container_name: eduresume-mongodb
-    ports:
-      - "27017:27017"
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: admin
-    volumes:
-      - mongodb_data:/data/db
-    networks:
-      - eduresume-network
-    healthcheck:
-      test: echo 'db.runCommand("ping").ok' | mongosh localhost:27017/test --quiet
-      interval: 10s
-      timeout: 5s
-      retries: 5
-
-  # Backend Service
   backend:
-    build:
+    build: 
       context: ./backend
-      dockerfile: Dockerfile
     container_name: eduresume-backend
     ports:
       - "5000:5000"
     environment:
+      MONGO_URI: ${MONGO_URI}
+      JWT_SECRET: ${JWT_SECRET}
+      JWT_EXPIRE: ${JWT_EXPIRE}
       NODE_ENV: development
       PORT: 5000
-      MONGO_URI: mongodb+srv://dhruvpatel150203_db_user:Fi3x45oFddyus3sb@eduresumepro-cluster-0.ivrzzsc.mongodb.net/eduresumepro
-      JWT_SECRET: eduresume_super_secret_jwt_key_change_in_production_2024
-      JWT_EXPIRE: 7d
-    depends_on:
-      mongodb:
-        condition: service_healthy
-    volumes:
-      - ./backend/src:/app/src
-      - ./backend/node_modules:/app/node_modules
     networks:
       - eduresume-network
-    command: npm run dev
 
-  # Frontend Service
   frontend:
     build:
       context: ./frontend
-      dockerfile: Dockerfile
     container_name: eduresume-frontend
     ports:
       - "3000:3000"
     environment:
       REACT_APP_API_URL: http://backend:5000/api
-      REACT_APP_ENV: development
     depends_on:
       - backend
-    volumes:
-      - ./frontend/src:/app/src
-      - ./frontend/node_modules:/app/node_modules
     networks:
       - eduresume-network
-    command: npm start
-
-volumes:
-  mongodb_data:
-    driver: local
 
 networks:
   eduresume-network:
