--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,42 +1,29 @@
-# Build stage
 FROM node:18-alpine as builder
+
+# Fix Alpine memory + npm issues
+RUN apk add --no-cache python3 make g++
 
 WORKDIR /app
 
 # Copy package files
-COPY package*.json ./
+COPY package.json package-lock.json* ./
 
-# Install dependencies
-RUN npm ci
+# Install ALL deps (including devDeps for build)
+RUN npm config set registry https://registry.npmjs.org/ && \
+    npm install
 
-# Copy source code
+# Copy source
 COPY . .
 
-# Build React app
-RUN npm run build
+# Build with max memory
+RUN NODE_OPTIONS="--max-old-space-size=4096" npm run build
 
 # Production stage
 FROM node:18-alpine
-
 WORKDIR /app
-
-# Install serve to run the app
 RUN npm install -g serve
-
-# Copy built app from builder stage
 COPY --from=builder /app/build ./build
-
-# Create non-root user for security
-RUN addgroup -g 1001 -S nodejs
-RUN adduser -S nodejs -u 1001
+RUN addgroup -g 1001 -S nodejs && adduser -S nodejs -u 1001
 USER nodejs
-
-# Expose port
 EXPOSE 3000
-
-# Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-  CMD node -e "require('http').get('http://localhost:3000', (r) => {if (r.statusCode !== 200) throw new Error(r.statusCode)})"
-
-# Start application
 CMD ["serve", "-s", "build", "-l", "3000"]
