--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: eduResume DevSecOps CI/CD
+name: CI - Tests & Security Scan
 
 on:
   push:
@@ -16,168 +16,237 @@ jobs:
     
     strategy:
       matrix:
-        node-version: [18.x, 20.x]
+        node-version: [16.x, 18.x]
     
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
       
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-        cache-dependency-path: backend/package-lock.json
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+          cache-dependency-path: backend/package-lock.json
       
-    - name: Install backend dependencies
-      working-directory: ./backend
-      run: npm ci
+      - name: Install dependencies
+        working-directory: ./backend
+        run: npm ci
       
-    - name: Run backend tests
-      working-directory: ./backend
-      run: npm test -- --coverage
-      env:
-        NODE_ENV: test
+      - name: Run tests
+        working-directory: ./backend
+        run: npm test -- --coverage
+        env:
+          NODE_ENV: test
       
-    - name: Upload backend coverage to Codecov
-      uses: codecov/codecov-action@v4
-      with:
-        files: ./backend/coverage/lcov.info
-        flags: backend
-        fail_ci_if_error: false
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          files: ./backend/coverage/lcov.info
+          flags: backend
+          fail_ci_if_error: false
 
   frontend-tests:
     runs-on: ubuntu-latest
     
     strategy:
       matrix:
-        node-version: [18.x, 20.x]
+        node-version: [16.x, 18.x]
     
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
       
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-        cache-dependency-path: frontend/package-lock.json
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
       
-    - name: Install frontend dependencies
-      working-directory: ./frontend
-      run: npm ci
+      - name: Install dependencies
+        working-directory: ./frontend
+        run: npm ci
       
-    - name: Run frontend tests
-      working-directory: ./frontend
-      run: npm test -- --coverage --watchAll=false
+      - name: Run tests
+        working-directory: ./frontend
+        run: npm test -- --coverage --watchAll=false
       
-    - name: Build frontend
-      working-directory: ./frontend
-      run: npm run build
+      - name: Build application
+        working-directory: ./frontend
+        run: npm run build
 
   codeql-scan:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
       
-    - name: Initialize CodeQL
-      uses: github/codeql-action/init@v3
-      with:
-        languages: javascript
-        
-    - name: Autobuild
-      uses: github/codeql-action/autobuild@v3
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v2
+        with:
+          languages: 'javascript'
       
-    - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v3
-      with:
-        category: "/language:javascript"
+      - name: Autobuild
+        uses: github/codeql-action/autobuild@v2
+      
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v2
+        with:
+          category: "/language:javascript"
 
   gitleaks-scan:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       
-    - name: Gitleaks Scan
-      uses: gitleaks/gitleaks-action@v3
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        GITLEAKS_PERMISSIONS: '{"readContents": true, "contents:read": true}'
+      - name: Gitleaks Scan
+        uses: gitleaks/gitleaks-action@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  build-backend-image:
+    needs: [backend-tests, codeql-scan, gitleaks-scan]
+    runs-on: ubuntu-latest
+    # if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: (github.event_name == 'push' && github.ref == 'refs/heads/main') || (github.event_name == 'pull_request' && github.base_ref == 'main')
+
+    steps:
+      - uses: actions/checkout@v3
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      
+      - name: Build Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: ./backend
+          push: false
+          tags: eduresume-backend:latest
+          outputs: type=docker,dest=/tmp/backend-image.tar
+      
+      - name: Upload backend image
+        uses: actions/upload-artifact@v3
+        with:
+          name: backend-image
+          path: /tmp/backend-image.tar
+
+  build-frontend-image:
+    needs: [frontend-tests, codeql-scan, gitleaks-scan]
+    runs-on: ubuntu-latest
+    # if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: (github.event_name == 'push' && github.ref == 'refs/heads/main') || (github.event_name == 'pull_request' && github.base_ref == 'main')
+
+    steps:
+      - uses: actions/checkout@v3
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      
+      - name: Build Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: ./frontend
+          push: false
+          tags: eduresume-frontend:latest
+          outputs: type=docker,dest=/tmp/frontend-image.tar
+      
+      - name: Upload frontend image
+        uses: actions/upload-artifact@v3
+        with:
+          name: frontend-image
+          path: /tmp/frontend-image.tar
 
   trivy-scan:
+    needs: [build-backend-image, build-frontend-image]
     runs-on: ubuntu-latest
-    needs: [backend-tests, frontend-tests, codeql-scan, gitleaks-scan]
-    
-    steps:
-    - uses: actions/checkout@v4
-      
-    - name: Build backend for Trivy scan
-      run: |
-        docker build -t eduresume-backend:test ./backend
-      
-    - name: Build frontend for Trivy scan  
-      run: |
-        docker build -t eduresume-frontend:test ./frontend
-      
-    - name: Trivy Vulnerability Scanner Backend
-      uses: aquasecurity/trivy-action@master
-      with:
-        image-ref: 'eduresume-backend:test'
-        format: 'sarif'
-        output: 'trivy-backend-results.sarif'
-        severity: 'CRITICAL,HIGH'
-      
-    - name: Trivy Vulnerability Scanner Frontend
-      uses: aquasecurity/trivy-action@master
-      with:
-        image-ref: 'eduresume-frontend:test'
-        format: 'sarif'
-        output: 'trivy-frontend-results.sarif'
-        severity: 'CRITICAL,HIGH'
-      
-    - name: Upload Trivy scan results (backend)
-      uses: github/codeql-action/upload-sarif@v3
-      with:
-        sarif_file: 'trivy-backend-results.sarif'
-      
-    - name: Upload Trivy scan results (frontend)
-      uses: github/codeql-action/upload-sarif@v3
-      with:
-        sarif_file: 'trivy-frontend-results.sarif'
+    # if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: (github.event_name == 'push' && github.ref == 'refs/heads/main') || (github.event_name == 'pull_request' && github.base_ref == 'main')
 
+    steps:
+      - uses: actions/checkout@v3
+      
+      - name: Download backend image
+        uses: actions/download-artifact@v3
+        with:
+          name: backend-image
+          path: /tmp
+      
+      - name: Download frontend image
+        uses: actions/download-artifact@v3
+        with:
+          name: frontend-image
+          path: /tmp
+      
+      - name: Load backend image
+        run: docker load --input /tmp/backend-image.tar
+      
+      - name: Load frontend image
+        run: docker load --input /tmp/frontend-image.tar
+      
+      - name: Run Trivy scan on backend
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: 'eduresume-backend:latest'
+          format: 'sarif'
+          output: 'backend-trivy-results.sarif'
+      
+      - name: Run Trivy scan on frontend
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: 'eduresume-frontend:latest'
+          format: 'sarif'
+          output: 'frontend-trivy-results.sarif'
+      
+      - name: Upload Trivy results
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: 'backend-trivy-results.sarif'
+          category: 'trivy-backend'
+      
+      - name: Upload Trivy results frontend
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: 'frontend-trivy-results.sarif'
+          category: 'trivy-frontend'
   deploy-render:
-    runs-on: ubuntu-latest
     needs: [backend-tests, frontend-tests, codeql-scan, gitleaks-scan, trivy-scan]
-    if: github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    # if: github.event_name == 'push' && github.ref == 'refs/heads/main' && github.repository == 'dhruvpatel0003/eduresumepro'
+    if: (github.event_name == 'push' && github.ref == 'refs/heads/main') || (github.event_name == 'pull_request' && github.base_ref == 'main')
+
     
     steps:
-    - name: Trigger Render Frontend Deploy
+    - uses: actions/checkout@v3
+    
+    # Frontend Deploy Hook
+    - name: Deploy Frontend to Render
       run: |
-        curl -X POST ${{ secrets.RENDER_DEPLOY_HOOK_FRONTEND }} \
-        -H "Content-Type: application/json"
-      
-    - name: Trigger Render Backend Deploy
+        curl -X POST \
+          ${{ secrets.RENDER_DEPLOY_HOOK_FRONTEND }} \
+          -H 'Content-Type: application/json'
+    
+    # Backend Deploy Hook  
+    - name: Deploy Backend to Render
       run: |
-        curl -X POST ${{ secrets.RENDER_DEPLOY_HOOK_BACKEND }} \
-        -H "Content-Type: application/json"
-
+        curl -X POST \
+          ${{ secrets.RENDER_DEPLOY_HOOK_BACKEND }}   \
+          -H 'Content-Type: application/json'
   ci-status:
     runs-on: ubuntu-latest
     needs: [backend-tests, frontend-tests, codeql-scan, gitleaks-scan, trivy-scan]
     if: always()
     
     steps:
-    - name: Final CI Status Check
-      run: |
-        if [[ "${{ needs.backend-tests.result }}" != "success" || 
-              "${{ needs.frontend-tests.result }}" != "success" ||
-              "${{ needs.codeql-scan.result }}" != "success" ||
-              "${{ needs.gitleaks-scan.result }}" != "success" ||
-              "${{ needs.trivy-scan.result }}" != "success" ]]; then
-          echo "❌ CI/Security checks failed"
-          exit 1
-        fi
-        echo "✅ All CI/Security checks passed! 🚀"
+      - name: Check CI Status
+        run: |
+          if [[ "${{ needs.backend-tests.result }}" != "success" || 
+                "${{ needs.frontend-tests.result }}" != "success" ||
+                "${{ needs.codeql-scan.result }}" != "success" ||
+                "${{ needs.gitleaks-scan.result }}" != "success" ||
+                "${{ needs.trivy-scan.result }}" != "success" ]]; then
+            echo "❌ CI/Security checks failed"
+            exit 1
+          fi
+          echo "✅ All CI/Security checks passed"
