--- a/backend/package.json
+++ b/backend/package.json
@@ -9,13 +9,14 @@
   },
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "bcryptjs": "^3.0.2",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "mongoose": "^8.19.0",
-    "bcryptjs": "^3.0.2",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "body-parser": "^1.20.2"
+    "mongoose": "^8.23.0",
+    "multer": "^2.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
