--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "devDependencies": {
     "concurrently": "^8.2.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "multer": "^2.0.2"
+  }
 }
